--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.3.2",
     "react-motion": "^0.5.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-select": "^1.2.1",
+    "react-x-editable": "^0.0.9-beta",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
   },
   "scripts": {
