--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "object-path-immutable": "^1.0.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-collapse": "^4.0.3",
