--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
     "object-path-immutable": "^1.0.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.3.2",
+    "react-modal": "^3.4.5",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
@@ -16,6 +18,7 @@
     "react-x-editable": "^0.0.9-beta",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-dialog": "^0.2.1",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
   },
