--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.10",
     "object-path-immutable": "^1.0.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
